objects/SFDocumentor__User_Collection__c.object
<CustomObject>
    <description>This Object will store all the information about the user in org.</description>
    <fields>
        <fullName>SFDocumentor__Alias__c</fullName>
        <label>Alias</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Bad_Nickname__c</fullName>
        <formula>IF(CONTAINS(&quot;0123456789&quot;,RIGHT(SFDocumentor__Nickname__c,1)),true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bad Nickname</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__IsDuplicateEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDuplicateEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Language__c</fullName>
        <label>Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Last_Sync_Date__c</fullName>
        <label>Last SFDoc Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Locale__c</fullName>
        <label>Locale</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Login_Status__c</fullName>
        <label>Login Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Manager__c</fullName>
        <label>Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Nickname__c</fullName>
        <label>Nickname</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Profile_Name__c</fullName>
        <description>This field will store profile name which is tagged to user</description>
        <label>Profile Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Recent_Login_Date_And_Time__c</fullName>
        <description>This will show when user logged in in recent</description>
        <label>Recent Login Date And Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Role__c</fullName>
        <label>Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SFDocumentorDesc__c</fullName>
        <label>SFDoc Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Setup_Link_URL__c</fullName>
        <label>Setup Link/URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__TimeZone__c</fullName>
        <label>TimeZone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__UserLicense_Name__c</fullName>
        <label>UserLicense Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__User_Id__c</fullName>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Username__c</fullName>
        <externalId>true</externalId>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>User Collection</label>
    <listViews>
        <fullName>SFDocumentor__All</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__Login_Status__c</columns>
        <columns>SFDocumentor__Email__c</columns>
        <columns>SFDocumentor__Locale__c</columns>
        <columns>SFDocumentor__Role__c</columns>
        <columns>SFDocumentor__Language__c</columns>
        <columns>SFDocumentor__Profile_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Collection  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>